4.0.0 fixed token service